# recursive-aigc

./: makefile  pyproject.toml
exps/example/: launcher.py
src/: paths.py
src/utils/: __init__.py
src/utils/computation/: get_all_devices.py
src/utils/lightning_utils/: configure_optimizer.py  load_model_from_trainer.py
src/utils/params/: merge_params.py
src/utils/python_utils/: __init__.py  get_valid_kwargs.py
src/utils/torch_utils/: compare_modules.py  get_activation.py  get_lr_scheduler.py  get_optimizer.py
tests/: test_get_torch_lr_scheduler.py
